      forwarding a message.
[mms] Cache results of address parsing.
[mms] Don't send server requests when autocompleting addresses when possible.
[mms] Added readonly mailbox and disable compose hooks.
[mms] Saving draft on session expiration now handled via VFS.
[mms] Add preference to delete draft on resume & send.


----------
v4.3.6-cvs
----------

[jan] Fix viewing S/MIME encrypted and signed messages from Outlook (Express)
      (Bug #8629).
[jan] Add Oracle-specific SQL script.
[jan] Add Croatian translation (Matej Vela <matej.vela@carnet.hr>,
      Iva Rumora <iva.rumora@zg.t-com.hr>).
[mms] Don't use translated folder prefixes in rename dialog (Bug #8554).
[jan] Add hook to retrieve public S/MIME and PGP keys.


------
v4.3.5
------

[mms] Upgrade prototype.js to v1.6.1.
[jan] Add example hook for the search_sources preference (dom.lalot@gmail.com,
      Request #7796).
[mms] Fix renaming shared folders contained in empty namespaces (Bug #8468).
[mms] Correctly handle NO untagged responses on login (Bug #8478).
[mms] Correctly set charset of Bcc header in sent mail (Bug #8362).
[mms] Fix spellcheck in text-mode for certain words in non-English locales
      (Bug #8330).
[mms] Fix some javascript if using IE 8 (uses IE 7 compatibility mode) (Bug
      #8345).
[jan] Allow to lock default_encrypt preference.
[mjr] Add example hook for the add_source preference (Bug #8285).
[mms] Fix unqualified domain preference (Bug #8272).
[jan] Highlight signed messages depending on the signature verification.
[mms] Fix display_folder hook (m.gabriel@das-netzwerkteam.de, Bug #8254).
[jan] Use correct charset when rendering inline PGP data.


------
v4.3.4
------

[mms] SECURITY: Don't cache local PGP public keys retrieved from the
      addressbook (found by Peter Meier <peter.meier@immerda.ch>).
[mms] If using spellcheck on send, automatically send if no spelling errors
      exist (Request #6892).
[jan] Show all addresses when printing messages.